fix: strong represenative election algorithm
Make sure to merge all clusters reachable from source and target.